# biz/handler/task_log/log_service.go
@@ -1,0 +1,42 @@
+// Code generated by hertz generator.
+
+package task_log
+
+import (
+	"context"
+	"jobor/biz/model"
+	"jobor/biz/response"
+	"jobor/kitex_gen/task_log"
+
+	"github.com/cloudwego/hertz/pkg/app"
+)
+
+// GetLog .
+//
+//	@Summary		jobor log get summary
+//	@Description	jobor log get
+//	@Tags			jobor log
+//	@Param			name		query	string	false	"name"
+//	@Param			page		query	int		false	"page"
+//	@Param			pageSize	query	int		false	"pageSize"
+//
+// @router /api/v1/jobor/log [GET]
+func GetLog(ctx context.Context, c *app.RequestContext) {
+	var err error
+	var req task_log.LogQuery
+	err = c.BindAndValidate(&req)
+	if err = c.BindAndValidate(&req); err != nil {
+		response.ParamFailed(ctx, c, err)
+		return
+	}
+
+	var objs model.Logs
+
+	resp := response.InitPageData(ctx, c, &objs, false)
+
+	if _, err = objs.List(&req, &resp); err != nil {
+		response.SendBaseResp(ctx, c, err)
+		return
+	}
+	response.SendDataResp(ctx, c, response.Succeed, resp)
+}
