# biz/router/task_log/task_log.go
@@ -1,0 +1,30 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package task_log
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	task_log "jobor/biz/handler/task_log"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_api := root.Group("/api", _apiMw()...)
+		{
+			_v1 := _api.Group("/v1", _v1Mw()...)
+			{
+				_jobor := _v1.Group("/jobor", _joborMw()...)
+				_jobor.GET("/log", append(_getlogMw(), task_log.GetLog)...)
+			}
+		}
+	}
+}
