# biz/router/worker/worker.go
@@ -1,0 +1,39 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package worker
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	worker "jobor/biz/handler/worker"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_api := root.Group("/api", _apiMw()...)
+		{
+			_v1 := _api.Group("/v1", _v1Mw()...)
+			{
+				_jobor := _v1.Group("/jobor", _joborMw()...)
+				_jobor.GET("/worker", append(_getworkerMw(), worker.GetWorker)...)
+				_worker := _jobor.Group("/worker", _workerMw()...)
+				_worker.PUT("/:id", append(_putworkerMw(), worker.PutWorker)...)
+				_worker.DELETE("/:id", append(_deleteworkerMw(), worker.DeleteWorker)...)
+				_jobor.POST("/worker", append(_postworkerMw(), worker.PostWorker)...)
+				_jobor.GET("/workers", append(_getworkerallMw(), worker.GetWorkerAll)...)
+				{
+					_worker0 := _jobor.Group("/worker", _worker0Mw()...)
+					_worker0.GET("/:id", append(_getworkerbyidMw(), worker.GetWorkerById)...)
+				}
+			}
+		}
+	}
+}
